package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ts_library")

# Common set-up for all Angular Material and CDK tests.
ts_library(
    name = "angular_test_init",
    testonly = True,
    # This file *must* end with "spec" in order for "karma_web_test_suite" to load it.
    srcs = [
        "angular-test-init-spec.ts",
        "test-blocklist.ts",
    ],
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@types/jasmine",
    ],
)
