load("//tools:defaults.bzl", "ts_config")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig_build",
    src = "tsconfig.json",
    deps = ["//:node_modules/@types/node"],
)

ts_config(
    name = "tsconfig_test",
    src = "tsconfig-test.json",
    deps = [
        ":tsconfig_build",
        "//:node_modules/@types/jasmine",
    ],
)

platform(
    name = "rbe_ubuntu1604-angular",
    parents = ["@rbe_ubuntu1604_angular//config:platform"],
    remote_execution_properties = """
        {PARENT_REMOTE_EXECUTION_PROPERTIES}
        properties: {
            name: "dockerAddCapabilities"
            value: "SYS_ADMIN"
        }
        properties: {
            name: "dockerNetwork"
            value: "standard"
        }
        properties: {
            name: "Pool"
            value: "default"
        }
        """,
)
