load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@aspect_rules_ts//ts:defs.bzl", rules_js_tsconfig = "ts_config")
load("//adev/shared-docs:defaults.bzl", "ng_project")
load("//tools:defaults.bzl", "pkg_npm")
load("//tools:defaults2.bzl", "ng_package")

package(default_visibility = ["//visibility:public"])

rules_js_tsconfig(
    name = "tsconfig_build",
    src = "tsconfig.json",
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
)

rules_js_tsconfig(
    name = "tsconfig_test",
    src = "tsconfig-test.json",
    visibility = [
        "//adev/shared-docs:__subpackages__",
    ],
    deps = [
        ":tsconfig_build",
        "//:node_modules/@types/jasmine",
    ],
)

ng_project(
    name = "docs",
    srcs = [
        "index.ts",
    ],
    deps = [
        "//adev/shared-docs/components:components_rjs",
        "//adev/shared-docs/directives:directives_rjs",
        "//adev/shared-docs/interfaces:interfaces_rjs",
        "//adev/shared-docs/pipes:pipes_rjs",
        "//adev/shared-docs/providers:providers_rjs",
        "//adev/shared-docs/services:services_rjs",
        "//adev/shared-docs/testing:testing_rjs",
        "//adev/shared-docs/utils:utils_rjs",
    ],
)

ng_package(
    name = "pkg",
    srcs = [
        "package.json",
        "//adev/shared-docs/icons",
        "//adev/shared-docs/pipeline:BUILD.bazel",
        "//adev/shared-docs/pipeline:_guides.bzl",
        "//adev/shared-docs/pipeline:_playground.bzl",
        "//adev/shared-docs/pipeline:_stackblitz.bzl",
        "//adev/shared-docs/pipeline:_tutorial.bzl",
        "//adev/shared-docs/pipeline:guides.mjs",
        "//adev/shared-docs/pipeline:guides-no-mermaid.mjs",
        "//adev/shared-docs/pipeline:playground.mjs",
        "//adev/shared-docs/pipeline:stackblitz.mjs",
        "//adev/shared-docs/pipeline:tutorial.mjs",
        "//adev/shared-docs/pipeline/examples/template:files",
        "//adev/shared-docs/pipeline/tutorials/common:files",
        "//adev/shared-docs/styles",
    ],
    package = "@angular/docs",
    visibility = [
        "//adev/shared-docs:__pkg__",
    ],
    deps = [
        ":docs_rjs",
    ],
)

copy_to_directory(
    name = "pkg_middle",
    srcs = [
        ":pkg",
    ],
    replace_prefixes = {
        "pkg": "",
    },
)

# Temporarily include this intermediate `pkg_npm` so that the rest of the adev tooling is able to
# properly performing linking using information from rules_nodejs toolchain providers.
pkg_npm(
    name = "npm_package",
    package_name = "@angular/docs",
    nested_packages = [
        ":pkg_middle",
    ],
    substitutions = {
        # Force the "unstamped" versions to be later than current so they are considered up to date.
        "0\\.0\\.0": "99.99.99",
    },
)
